HW16: Implement and test subList()